5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4185/executions/1764_672.log
== TEST (2019-05-21 17:42:10) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import

n= int(input("digite a quant: ")
v1 = ones(n,dtypes=int)
print(v1)
-- ERROR:
File "XXXX", line 2
    from numpy import
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:21) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import*

n= int(input("digite a quant: ")
v1 = ones(n,dtypes=int)
print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(n,dtypes=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:25) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n= int(input("digite a quant: ")
v1 = ones(n,dtypes=int)
print(v1)
-- ERROR:
File "XXXX", line 5
    v1 = ones(n,dtypes=int)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:42:59) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n= int(input("digite a quant: "))
v1 = ones(n,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:43:12) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n= int(input("digite a quant: "))
v1 = ones(n,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 17:43:20) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n= int(input("digite a quant: "))
v1 = ones(n,dtype=int)
print(v1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-21 17:43:26) 
-- CODE:
# Não se esqueça de incluir o módulo numpy
from numpy import *

n= int(input("digite a quant: "))
v1 = ones(n,dtype=int)
print(v1)
-- EXECUTION TIME:
0.531432
-- TEST CASE 1:
---- input:
34
---- correct output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
-- TEST CASE 2:
---- input:
10
---- correct output:
[1 1 1 1 1 1 1 1 1 1]
---- user output:
[1 1 1 1 1 1 1 1 1 1]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
